--- a/index.html
+++ b/index.html
@@ -10,33 +10,37 @@
 </head>
 
 <body>
-    <div  class="container mt-5">
-    <img src="img/REDE-GAZETA_negativo.png" alt="Imagem de Recarregar" id="reloadImage" style="cursor: pointer;">
-    <div id="main-container" class="">
-        <h2 class="text-style">Sorteador Institucional 🍀</h2>
+    <div class="container mt-5">
+        <img src="img/REDE-GAZETA_negativo.png" alt="Imagem de Recarregar" id="reloadImage" style="cursor: pointer;">
+        <div id="main-container" class="">
+            <h2 class="text-style">Sorteador Institucional 🍀</h2>
 
-        <!-- Número de Ingressos a Serem Sorteados -->
-        <div class="form-group">
-            <label for="numIngressos">Número de Ingressos por Diretoria:</label>
-            <input type="number" id="numIngressos" class="form-control" placeholder="Digite o número de ingressos"
-                required>
+            <!-- Número de Ingressos a Serem Sorteados -->
+            <div class="form-group">
+                <label for="numIngressos">Número de Ingressos por Diretoria:</label>
+                <input type="number" id="numIngressos" class="form-control" placeholder="Digite o número de ingressos"
+                    required>
+            </div>
+
+            <!-- Upload de Arquivo -->
+            <div class="form-group">
+                <label for="fileUpload">Selecione um arquivo com a lista (.xlsx):</label>
+                <input type="file" id="fileUpload" class="form-control-file" accept=".xlsx" required>
+            </div>
+
+            <!-- Botão de Processamento -->
+            <button class="btn btn-primary" onclick="processFile()">Sortear 🎲</button>
         </div>
 
-        <!-- Upload de Arquivo -->
-        <div class="form-group">
-            <label for="fileUpload">Selecione um arquivo com a lista (.xlsx):</label>
-            <input type="file" id="fileUpload" class="form-control-file" accept=".xlsx" required>
-        </div>
+        <!-- Exibição de Resultados ou Erros -->
+        <div id="result" class="mt-4"></div>
 
-        <!-- Botão de Processamento -->
-        <button class="btn btn-primary" onclick="processFile()">Sortear 🎲</button>
-    </div>
-    
-    <!-- Exibição de Resultados ou Erros -->
-    <div id="result" class="mt-4"></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-    <script src="js/script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+        <script src="js/fileReader.js"></script>
+        <script src="js/validation.js"></script>
+        <script src="js/grouping.js"></script>
+        <script src="js/sorting.js"></script>
+        <script src="js/ui.js"></script>
 </body>
 
 </html>
