--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sorteador Institucional</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon-32x32.png" />
 </head>
 
 <body>
